--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="home-content">
             <div class="home-presentation">
               <h1>Seamsless Transition</h1>
-              <p>Beautiful transition between html pages</p>
+              <p>Beautiful transition between html page</p>
             </div>
             <img src="https://raw.githubusercontent.com/developedbyed/page-transitions-js/0add257c0430bfbc9062afc112f98311bb1b721d/images/about.svg" alt="home" />
           </div>
